chore: prevent ui stretching on big screens

--- a/keep-ui/app/globals.css
+++ b/keep-ui/app/globals.css
@@ -7,3 +7,17 @@
     display: none;
 }
 */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+@layer components {
+  .max-container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+}
