--- a/keep-ui/app/providers/providers-tiles.css
+++ b/keep-ui/app/providers/providers-tiles.css
@@ -21,7 +21,7 @@
 @media only screen and (min-width: 1280px) and (max-width: 1920px) {
   /* Styles for 13 to 14-inch laptop screens */
   .provider-tiles {
-    gap: 10px;
+    gap: 20px;
   }
 }
 .provider-tiles .card {
